# business-search-engine

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml
.github/actions/setup/: action.yml
.github/workflows/: backend-code-quality.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py
backend/app/celery_app/: celery_config.py  tasks.py
backend/app/llm/: processor.py
backend/app/models/: schemas.py
backend/app/scraper/: nodriver_scraper.py  stealth_patch.js  utils.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/: api.ts
frontend/src/components/: ProgressTracker.tsx  ResultsDisplay.tsx  SearchBar.tsx
frontend/src/types/: index.ts
frontend/src/utils/: utils.ts
scripts/: start_api.sh  test_api.sh
